# rs3

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  Vagrantfile  Vagrantfile.linux.amd64.aws  Vagrantfile.linux.amd64.vmware-desktop  Vagrantfile.osx.amd64.vmware-fusion  Vagrantfile.osx.arch64.parallels  azure-pipelines.yml  create_docker_rs3_network.sh  default.yml  env.example  fix_vagrant_ssh_key.sh
.github/workflows/: actions-rs.yml
aws/: ec2.tf
docker_rs3/: ansible_start.sh  ansible_start_frontend.sh  ansible_start_rs3.sh  playbook.yml  playbook_dev.yml  playbook_prod.yml  playbook_rs3.yml  readme.md
docker_rs3/config/: haproxy.cfg
docker_rs3/helpers/: create_docker_rs3_network.sh
docker_rs3/vars/: defaults-aarch64.yml  defaults-x86_64.yml  defaults.yml
docker_ubuntu2004/: playbook.yml  readme.md
docker_ubuntu2004/vars/: default.yml  defaults-aarch64.yml  defaults-x86_64.yml
experiments/Vagrant/: fix_vagrant_ssh_key.sh
experiments/hashring/: Cargo.toml
experiments/rendezvous_hashing/: Cargo.toml
hashring/: Cargo.toml
hashring/src/: main.rs
parseapidocs/: Cargo.toml  apirequests.txt
rendezvous_hashing/src/: main.rs
requests/: bin.js  bin.txt  fac.js  fac.txt  rs3_http_localhost_5000.http  rs3_https_rs3_cwe.http  rs3_insert_code.http  store.js  store.txt  sum.js  sum.txt
rs3/: azure-pipelines.yml  default.yml
rs3/src/config/: mod.rs
src/: example.js  main.rs
src/bindings/: mod.rs
src/config/: mod.rs
src/services/: mod.rs
web_scrape_s3_api/: Cargo.toml  apirequests.txt
web_scrape_s3_api/src/: main.rs  raw_api_docs.txt
(+4 files in other folders)
