[package]
name = "rs3"
version = "0.1.1"
authors = ["johannes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
tokio = "1.7.0"
dotenv = "0.15.0"
config = "0.11.0"
serde = "1.0.130"
serde_json = "1.0.67"
flurry = "0.3.1"
deno_core = { git = "https://github.com/denoland/deno", branch = "main" }
rusty_v8 = "0.27.0"
