[package]
name = "web_scrape_s3_api"
version = "0.1.0"
authors = ["Johannes Frank <jmfrank63@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"
select = "0.5.0"
scraper = "0.12.0"


